<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="itemView"
            type="com.vald3nir.data.models.EventItemView" />

        <variable
            name="listEventsListener"
            type="android.view.View.OnClickListener" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin_between_views"
            android:onClick="@{listEventsListener}"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/iv_event"
                    loadImage="@{itemView.image}"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="@dimen/margin_between_views"
                    android:contentDescription="@string/event_image" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/iv_event"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txt_title"
                        style="@style/BoldTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_between_views"
                        android:text="@{itemView.title}"
                        tools:text="@string/carnival_party" />

                    <LinearLayout
                        android:id="@+id/ll_subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            style="@style/LittleTextViewStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:maxLines="1"
                            android:text="@{itemView.price}"
                            tools:text="@string/price_default" />

                        <TextView
                            style="@style/LittleTextViewStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:maxLines="1"
                            android:text="@{itemView.dateCalendar}"
                            tools:text="@string/data_default" />

                    </LinearLayout>

                </RelativeLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>