<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="errorMessage"
            type="String" />

        <variable
            name="checkInListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="cancelListener"
            type="android.view.View.OnClickListener" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:title="@string/check_in" />

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_between_section"
                    android:hint="@string/email"
                    app:boxBackgroundColor="@android:color/white"
                    app:boxStrokeColor="@android:color/background_dark"
                    app:hintTextColor="@android:color/background_dark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/txt_email_error"
                    style="@style/ErrorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_between_views"
                    android:text="@{errorMessage}"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/name"
                    app:boxBackgroundColor="@android:color/white"
                    app:boxStrokeColor="@android:color/background_dark"
                    app:hintTextColor="@android:color/background_dark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/txt_name_error"
                    style="@style/ErrorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_between_views"
                    android:text="@{errorMessage}"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    style="@style/DefaultButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{cancelListener}"
                    android:text="@android:string/cancel" />

                <Button
                    style="@style/DefaultButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/margin_between_section"
                    android:layout_marginEnd="0dp"
                    android:layout_weight="1"
                    android:onClick="@{checkInListener}"
                    android:text="@android:string/ok" />

            </LinearLayout>

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
